[data:ASN-DROP] IP (CIDR) list from Spamhaus ASN DROP List
Signed-off-by: Markus Heiser <markus.heiser@darmarit.de>

--- a/data/Makefile
+++ b/data/Makefile
@@ -5,7 +5,7 @@ TOPTARGETS := all clean test build
 # wrap ./run script
 # -----------------
 
-RUN += help clean
+RUN += help clean spamhaus.ASN-DROP
 PHONY += $(RUN)
 $(RUN):
 	@./run $@
